--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,16 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+
+
+
+.DS_Store
+Thumbs.db
+db.json
+*.log
+node_modules/
+public/
+.deploy*/
+src/_drafts
+package-lock.json
